--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,15 +1,18 @@
-<div class="welcome">
-  <h1>Welcome to my Awesome Quiz!</h1>
-  <p>Choose your quiz</p>
-</div>
-<div class="quiz-list" *ngFor="let q of quiz">
-  <mat-card>
-    <mat-card-title>{{ q.label }}</mat-card-title>
-    <mat-card-content>{{ q.description }}</mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button color="accent">
-        <a routerLink="/{{ q.name }}">Select</a>
-      </button>
-    </mat-card-actions>
+<div>
+  <mat-card color="primary">
+    <mat-card-title class="title"> Quizzes</mat-card-title>
   </mat-card>
+  <div *ngFor="let q of quiz">
+    <mat-card>
+      <mat-card-title>{{ q.label }}</mat-card-title>
+      <mat-card-subtitle>{{ q.description }}</mat-card-subtitle>
+      <mat-card-actions>
+        <button mat-raised-button color="accent" class="btn btn-primary">
+          <a routerLink="/{{ q.name }}" class="btn btn-primary"
+            >Select this quiz</a
+          >
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
 </div>
