--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -2,9 +2,18 @@ mat-card {
   width: 75%;
   margin: auto;
   text-align: center;
+  background-color: #d3d3d3;
 }
 
 a {
   text-decoration: none;
   color: #2a6259;
+}
+
+.mat-card-title {
+  font-size: 30px;
+}
+
+.title {
+  font-size: 50px;
 }
