--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -2,7 +2,7 @@ mat-card {
   width: 75%;
   margin: auto;
   text-align: center;
-  background-color: #d3d3d3;
+  background-color: #67c8ff;
 }
 
 a {
