--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,6 +1,7 @@
 <div>
   <mat-card color="primary">
-    <mat-card-title class="title"> Quizzes</mat-card-title>
+    <mat-card-title class="title"> Comedy Quizzes</mat-card-title>
+    <mat-card-title class="header">Test your Comedy IQ</mat-card-title>
   </mat-card>
   <div *ngFor="let q of quiz">
     <mat-card>
