--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -1,5 +1,5 @@
 mat-card {
-  width: 75%;
+  width: 200px;
   margin: auto;
   text-align: center;
   background-color: #67c8ff;
@@ -16,4 +16,8 @@ a {
 
 .title {
   font-size: 50px;
+}
+
+.header {
+  font-size: 35px;
 }
