Updated correct/incorrect colors

--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,5 +1,8 @@
 <div class="results">
   <h2>Results</h2>
+  <h3>Green = correct.</h3>
+  <h3>Red = incorrect.</h3>
+
   <div
     class="answer"
     *ngFor="let a of answers.values"
