--- a/src/app/results/results.component.scss
+++ b/src/app/results/results.component.scss
@@ -5,3 +5,41 @@
 .btn {
   color: #2a6259;
 }
+
+body {
+  background-color: #e8f75f;
+}
+.answer {
+  background-color: red;
+  width: auto;
+  font-size: 26px;
+  text-align: center;
+  margin: auto;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+
+.correct {
+  background-color: #00ff00;
+}
+
+.btn-primary {
+  background-color: #e8f75f;
+}
+
+.btn-primary {
+  background-color: #e8f75f;
+}
+
+mat-card {
+  width: 50%;
+  margin: auto;
+  text-align: center;
+}
+
+.title {
+  margin: auto;
+  background-color: #000057;
+  color: white;
+  font-size: 30px;
+}
